--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <h1>Khin Sandar Yu</h1>
                 <h2>Field Service Engineer | Cloud & System Engineer</h2>
                 <p style="margin-bottom: 1rem; color: #4b5563;">
-                    Managed Service Engineer | System Engineer | Technical Operations & Support
+                    IT BSS/OSS Operations&Delivering | Cloud Services and Digital Transformation | IT Field Services
                 </p>
                 <div class="contact-info">
                     <a href="mailto:khinsandaryujob@gmail.com" class="contact-item">
@@ -195,13 +195,16 @@
                         <span>Windows</span>
                         <span>ITIL</span>
                         <span>Incident Management</span>
+                        <span>Change Management</span>
+                        <span>Risk Management</span>
+                        <span>Project Management</span>
                     </div>
                 </div>
 
                 <div class="tech-category">
                     <h4>Scripting & Automation</h4>
                     <div class="tags">
-                        <span>Python (Boto3)</span>
+                        <span>Python / Java</span>
                         <span>Bash</span>
                         <span>YAML</span>
                         <span>JSON</span>
@@ -223,11 +226,12 @@
                 <div class="tech-category">
                     <h4>Monitoring & Tools</h4>
                     <div class="tags">
-                        <span>CloudWatch</span>
-                        <span>Dynatrace</span>
-                        <span>Prometheus</span>
-                        <span>Jira/Confluence</span>
-                        <span>ServiceNow</span>
+                        <span>CloudWatch/CloudTrail</span>
+                        <span>AWSConfig/SSM</span>
+                        <span>Amazon SNS</span>
+                        <span>AWS Security Hub</span>
+                        <span>Jira</span>
+                        <span>ServiceNow/HPSM</span>
                     </div>
                 </div>
             </div>
