--- a/index.html
+++ b/index.html
@@ -63,10 +63,8 @@
             <img src="img/khin_profile.png" alt="Khin Sandar Yu" class="profile-img" loading="lazy">
             <div class="header-content">
                 <h1>Khin Sandar Yu</h1>
-                <h2>Field Service Engineer | Cloud & System Engineer</h2>
-                <p style="margin-bottom: 1rem; color: #4b5563;">
-                    IT BSS/OSS Operations&Delivering | Cloud Services and Digital Transformation | IT Field Services
-                </p>
+                <h2>IT BSS/OSS Operations&Delivering | Cloud Services and Digital Transformation | IT Field Services
+                </h2>
                 <div class="contact-info">
                     <a href="mailto:khinsandaryujob@gmail.com" class="contact-item">
                         <i class="fa-solid fa-envelope"></i> khinsandaryujob@gmail.com
